gpas/app/depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpas
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector: { }
  template:
    metadata:
      labels:
        app.life.uni-leipzig.de/redundancy: none
        app.life.uni-leipzig.de/service-level: silver
    spec:
      enableServiceLinks: false
      containers:
      - name: gpas
        image: mosaicgreifswald/gpas:2025.2.0@sha256:e61946ae994e658ecdeb5dfc86b4102d248e22cfdde10b6c6e6dfefeb654739c
        ports:
        - name: http
          containerPort: 8080
        startupProbe:
          httpGet: &probe
            path: /gpas/gpasService?wsdl
            port: http
          failureThreshold: 24
          periodSeconds: 10
        readinessProbe:
          httpGet: *probe
        livenessProbe:
          httpGet: *probe
        resources:
          requests:
            cpu: "125m"
            memory: "2Gi"
          limits:
            memory: "2Gi"
