gpas/app/workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpas
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector: { }
  template:
    metadata:
      labels:
        app.life.uni-leipzig.de/redundancy: none
        app.life.uni-leipzig.de/service-level: silver
    spec:
      enableServiceLinks: false
      containers:
      - name: gpas
        image: mosaicgreifswald/gpas:2025.2.0@sha256:e61946ae994e658ecdeb5dfc86b4102d248e22cfdde10b6c6e6dfefeb654739c
        ports:
        - name: http
          containerPort: 8080
        startupProbe:
          httpGet: &probe
            path: /
            port: http
          failureThreshold: 24
          periodSeconds: 10
        readinessProbe:
          httpGet: *probe
        livenessProbe:
          httpGet: *probe
        resources:
          requests:
            cpu: "125m"
            memory: "2.5Gi"
          limits:
            memory: "2.5Gi"
        volumeMounts:
        - name: cacerts
          mountPath: /usr/lib/jvm/zulu21/lib/security/cacerts
          subPath: cacerts
          readOnly: true
        - name: wildfly-cli
          mountPath: /entrypoint-wildfly-cli/proxy-forwarding.cli
          subPath: proxy-forwarding.cli
          readOnly: true
      volumes:
      - name: ca-certs
        configMap:
          name: life-ca-certs
          items:
          - key: life-root-ca-2.pem
            path: life-root-ca-2.crt
      - name: cacerts
        emptyDir: { }
      - name: wildfly-cli
        configMap:
          name: wildfly-cli
