gpas/app/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gpas
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector: { }
