gpas/app/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gpas
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  rules:
  - host: gpas.distance-xt.life.uni-leipzig.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gpas
            port:
              name: http
